--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 
 
     <EditText
-        android:id="@+id/beautifulEditText"
+        android:id="@+id/userId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
@@ -32,13 +32,26 @@
         android:textColorHint="#9E9E9E"
         android:textSize="16sp" />
 
+    <EditText
+        android:id="@+id/userName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:background="@drawable/rounded_corner"
+        android:hint="Create your username"
+        android:inputType="text"
+        android:padding="14dp"
+        android:textColor="#212121"
+        android:textColorHint="#9E9E9E"
+        android:textSize="16sp" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/loginBtn"
         android:text="Start"
         android:layout_gravity="center"
-        android:layout_marginTop="30dp"/>
+        android:layout_marginTop="20dp"/>
 
 
     <TextView
@@ -46,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Created by TechNeurons"
-        android:layout_marginTop="250dp"/>
+        android:layout_marginTop="180dp"/>
 
 
 </LinearLayout>
