--- a/app/src/main/res/drawable/rounded_corner.xml
+++ b/app/src/main/res/drawable/rounded_corner.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#FFFFFF" />
+    <solid android:color="#F8F9FA" />
+    <stroke
+        android:width="1dp"
+        android:color="#E1E5E9" />
     <corners android:radius="12dp" />
-    <stroke android:width="1dp" android:color="#DDDDDD" />
 </shape>
