--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,49 +6,61 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    android:background="@color/white"
+    tools:context=".MainActivity"
+    android:padding="24dp">
 
     <ImageView
+        android:id="@+id/image_Logo"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_gravity="center"
+        android:src="@drawable/logo"
+        android:contentDescription="App Logo"
+        android:layout_marginTop="60dp"
+        app:tint="@color/colorPrimary" />
+
+    <TextView
+        android:id="@+id/titleText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/image_Logo"
+        android:text="Welcome to TechNeurons"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_gravity="center"
-        android:layout_marginTop="100dp"
-        android:src="@drawable/logo"
-         />
-
+        android:layout_marginTop="24dp" />
 
     <EditText
         android:id="@+id/userId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:background="@drawable/rounded_corner"
-        android:hint="Create your user id"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="32dp"
+        android:hint="Enter your User ID"
         android:inputType="text"
-        android:padding="14dp"
+        android:padding="16dp"
+        android:background="@drawable/rounded_corner"
         android:textColor="#212121"
         android:textColorHint="#9E9E9E"
         android:textSize="16sp" />
 
-
-
     <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/loginBtn"
-        android:text="Start"
-        android:layout_gravity="center"
-        android:layout_marginTop="20dp"/>
-
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Start Journey"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColor="@android:color/white"
+        android:elevation="4dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="Created by TechNeurons"
-        android:layout_marginTop="180dp"/>
-
-
+        android:textSize="14sp"
+        android:textColor="#B0BEC5"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="16dp"/>
 </LinearLayout>
